--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ dist
 dist-ssr
 *.local
 /backend/env
+/fashion-closet-credentials
 
 # Editor directories and files
 .vscode/*
@@ -23,6 +24,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+*.docx
 
 # Environment files
 .env
